fix(paintings): removed height 500px so that exampleCollectionSection fits well on smaller screens (previous commit had same update for prints)

--- a/src/UI/UIComponents/BODY/home/components/paintings/paintings.module.scss
+++ b/src/UI/UIComponents/BODY/home/components/paintings/paintings.module.scss
@@ -7,7 +7,6 @@
   }
 
   .exampleCollectionSection {
-    height: 500px;
     overflow: hidden;
   }
 
